Attempting fix (hack) for collapsed Bootstrap menu

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,6 @@
 @import "bootstrap";
 @import "bootstrap-responsive";
+
+.dropdown-backdrop {
+    position: static !important;
+}
